[gd_scene load_steps=4 format=3 uid="uid://d0fx804unbs4j"]

[ext_resource type="Script" uid="uid://daopacmsgdfpp" path="res://Battle/Combantants/combatant.gd" id="1_3b8io"]
[ext_resource type="Resource" uid="uid://bipqqu3iukmfw" path="res://Data/Characters/Monsters/Ghost.tres" id="2_vhic5"]
[ext_resource type="AnimationLibrary" uid="uid://cw4bt10xfcg54" path="res://Battle/Combantants/animations.res" id="4_ofm7p"]

[node name="Combatant" type="FlowContainer"]
custom_minimum_size = Vector2(384, 128)
offset_right = 384.0
offset_bottom = 140.0
pivot_offset = Vector2(170, 64)
script = ExtResource("1_3b8io")
member_data = ExtResource("2_vhic5")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="AtbGauge" type="ProgressBar" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 46.85

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LvlLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Lvl. 1"

[node name="NameLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ghost"

[node name="Control2" type="Control" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "PD:"

[node name="MeleeShield" type="ProgressBar" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_vertical = 2
max_value = 10.0
value = 10.0
show_percentage = false

[node name="MeleeShieldLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/MeleeShield"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "10 / 10"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "MD:"

[node name="MagicShield" type="ProgressBar" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
max_value = 10.0
value = 10.0
show_percentage = false

[node name="MagicShieldLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/MagicShield"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "10 / 10"
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3"]
layout_mode = 2
text = "HP:"

[node name="Health" type="ProgressBar" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
max_value = 3.0
value = 3.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer3/Health"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "3 / 3"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": ExtResource("4_ofm7p")
}

[node name="TargetPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(392, 64)

[node name="SelectionMarker" type="Line2D" parent="TargetPoint"]
unique_name_in_owner = true
visible = false
position = Vector2(32, 0)
rotation = 2.36842
points = PackedVector2Array(-5.44904, 17.0384, 17.1767, 16.7619, 16.9002, -5.86383)
